# netto

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README  README.md  grafana_dashboard.json  stack_trace
main/: Cargo.toml  build.rs
main/src/: common.rs  ksyms.rs  main.rs  tui.rs
main/src/actors/: metrics_collector.rs  mod.rs  trace_analyzer.rs
main/src/bpf/: event_stack.bpf.h  prog.bpf.c  prog.bpf.h
metrics-common/: Cargo.toml
metrics-common/src/: lib.rs
netto/: Cargo.toml
netto/src/: main.rs
netto/src/actors/: file_logger.rs  logger.rs  metrics_collector.rs  mod.rs  prometheus_logger.rs  trace_analyzer.rs  websocket_client.rs
netto/src/bpf/: prog.bpf.c  prog.bpf.h  vmlinux.h
web-frontend/: Cargo.toml
web-frontend/src/: lib.rs  plot.rs  table.rs
www/: index.html
xtask/src/: main.rs  run.rs
