[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.20"
perf-event-open-sys = "4.0"
anyhow = "1.0"
powercap = "0.3"
actix = "0.13"
actix-web = "4.3"
actix-web-actors = "4.2"
actix-files = "0.6"
tokio = { version = "1.28", features = ["sync", "macros"] }
metrics-common = { path = "../metrics-common" }

[build-dependencies]
libbpf-cargo = "0.20"
bindgen = "0.64"
