[package]
name = "web-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Location",
    "WebSocket",
    "MessageEvent",
    "Document",
    "Element",
    "Node",
    "HtmlCollection"
]}
console_error_panic_hook = { version = "0.1", optional = true }
metrics-common = { path = "../metrics-common" }

[features]
default = ["console_error_panic_hook"]
